# sacad

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  MANIFEST.in  README.md  TODO.md  cliff.toml  clippy.toml  colored_logging.py  freeze.py  freeze_wrapper.py  mkstemp_ctx.py  pyproject.toml  release  requirements.txt  sacad.py  setup.py  update-version  web_cache.py
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
sacad/: __init__.py  __main__.py  api_watcher.py  colored_logging.py  cover.py  http.py  http_helpers.py  mkstemp_ctx.py  rate_watcher.py  recurse.py  redo.py  tqdm_logging.py  web_cache.py
sacad/sources/: __init__.py  amazon.py  amazonbase.py  amazoncd.py  amazondigital.py  base.py  coverartarchive.py  coverlib.py  coverparadise.py  deezer.py  discogs.py  google_images.py  itunes.py  lastfm.py
src/: cl.rs  cover.rs  extras.rs  lib.rs  perceptual_hash.rs  tags.rs  walk.rs
src/http/: cache.rs  mod.rs
src/source/: coverartarchive.rs  deezer.rs  discogs.rs  itunes.rs  lastfm.rs  mod.rs
tests/: __init__.py  rate_watcher_test.py  recurse_test.py  web_cache_test.py
win/: Makefile  fix-issue26313-python34.patch  package_win.bat
