[package]
name = "sacad"
authors = ["desbma"]
description = "Smart Automatic Cover Art Downloader"
readme = "README.md"
version = "3.0.0-beta.1"
rust-version = "1.91"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std", "backtrace"] }
async-channel = { version = "2.5.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false }
# forked to remove bloated image dependency tree
blockhash = { git = "https://github.com/desbma/blockhash", branch = "sacad", default-features = false, optional = true, features = ["std", "image"] }
clap = { version = "4.5.54", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
const_format = { version = "0.2.35", default-features = false }
directories = { version = "6.0.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false }
heck = { version = "0.5.0", default-features = false }
human_bytes = { version = "0.4.3", default-features = false }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
indicatif = { version = "0.18.3", default-features = false, features = ["improved_unicode", "unicode-width"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc", "use_std"] }
lofty = { version = "0.22.4", default-features = false }
log = { version = "0.4.29", default-features = false, features = ["max_level_trace", "release_max_level_debug", "std"] }
lz4_flex = { version = "0.11.5", default-features = false, features = ["std"] }
oxipng = { version = "10.0.0", default-features = false, features = ["parallel"] }
parking_lot = { version = "0.12.5", default-features = false }
quick-xml = { version = "0.38.4", default-features = false, features = ["serialize"] }
redb = { version = "3.1.0", default-features = false }
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "native-tls", "gzip", "system-proxy", "socks", "stream"] }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.27.2", default-features = false, features = ["derive", "std"] }
tempfile = { version = "3.24.0", default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "sync", "parking_lot"] }
typed_floats = { version = "1.0.7", default-features = false, features = ["compiler_hints", "ensure_no_undefined_behavior", "std"] }
unicode-normalization = { version = "0.1.25", default-features = false, features = ["std"] }

[features]
default = ["blockhash"]
ahash = []
dhash = []
blockhash = ["dep:blockhash"]

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
# unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
unnecessary_debug_formatting = "allow"
# below lints are from clippy::restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
implicit_clone = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
